--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,5 +30,9 @@
     "tailwindcss": "^3.4.19",
     "typescript": "^5.3.3",
     "vite": "^5.0.8"
+  },
+  "engines": {
+    "node": "18.x"
   }
+  
 }
